Fixed intro shape visible lg

--- a/src/sass/sections/intro/_intro-shape.sass
+++ b/src/sass/sections/intro/_intro-shape.sass
@@ -12,6 +12,9 @@
 		+m('right')
 			right: 0
 			bottom: 90%
+
+			+min(sm)
+				bottom: 75%
 		
 		+m('main')
 			opacity: 0.5
